copied example from man pag to remap the prefix

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,6 @@
 # remap prefix from 'C-b' to 'C-a'
-unbind C-b
 set-option -g prefix C-a
+unbind-key C-b
 bind-key C-a send-prefix
 
 # start with index 1 for first window
